[package]
name = "hubspot-rust-sdk"
version = "0.2.0"
edition = "2021"

authors = ["Lachlan Hislop lachie.hislop@gmail.com"]
description = "A HubSpot SKD for Rust."
license = "MIT"
repository = "https://github.com/Lenard-0/hubspot-rust-sdk"
documentation = "https://docs.rs/hubspot-rust-sdk"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
dotenv = "0.15.0"